Working on product page design

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "vue-image-magnifier": "^0.2.1",
+    "vue-magnifier": "^1.0.6",
     "vue-slick-carousel": "^1.0.6",
+    "vue-zoom-on-hover": "^1.0.6",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
