--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@nuxt/components": "^2.2.1",
     "@nuxtjs/auth-next": "5.0.0-1624817847.21691f1",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/i18n": "^7.0.3",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "nuxt-moment": "^1.0.5",
     "vue-image-magnifier": "^0.2.1",
     "vue-magnifier": "^1.0.6",
     "vue-slick-carousel": "^1.0.6",
     "vue-zoom-on-hover": "^1.0.6",
+    "vuejs-countdown-timer": "^2.1.3",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
